# gpsaggese.github.io

./: .claude  .coveragerc  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  404.html  CLAUDE.md  Git_Docker_Setup_Submission.tex  Improved_DATA605_Slides.md  MSML610_Github_Docker_Assignment.docx.md  MSML610_Github_Docker_Submission_Template.md  README.md  README.slides.md  README.txt  changelog.txt  conftest.py  count_pages.sh  count_words.sh  docker_common  docs  encrypt.py  figure_mappings.csv  fix_slides.prompt.md  gen_data605.sh  gen_data605_all.sh  gen_data605_script.sh  gen_msml610.sh  generate_lesson.md  generate_lesson.py  gp_publications.bib  how_to_contribute.md  index.html  jupyter_chat_extension.ipynb  latex_abbrevs.sty  linter_warnings.txt  linters2  notify.sh  (+25 more)
02_cv/: index.html
03_education/: index.html
04_teaching/: index.html
05_publications/: index.html
06_research/: index.html
07_coding/: index.html
UmdTask112_Group40_Semantic_Search/: .dockerignore  README.md  app.py  docker-compose.yml  semantic_search.API.ipynb  semantic_search.API.md  semantic_search.example.ipynb  semantic_search_complete.ipynb
UmdTask70_Fall2025_Timeseries_Forecasting_using_Xformers/: Dockerfile  jupyter_server_config.py  metrics.txt  requirements.txt  utils_data_io.py  xformers_timeseries.API.md
ai_prompts/: blog.write_blog.md  slides.write_slides.md
archive/: 2025.html
blog/: all.learn_X_in_60_minutes.how_to_guide.md  index.html
blogs/: all.learn_X_in_60_minutes.how_to_guide.md
category/: AI-Research.html  Software-Engineering.html
causal_success_analysis/: BRANCH_NAMING_IMPORTANT.txt  Dockerfile  README.md  SUBMISSION_CHECKLIST.txt  causal_success_simulation.py  causal_success_tutorial.md  docker_build.sh  docker_jupyter.sh  requirements.txt  tutorial_causal_success.ipynb  version.sh
class_project/: FAQ.md  README.md  check_out.sh  class_project_FAQs.md  create_PR.py  create_PR.sh  fall2025_msml610_branches_dirs.txt  problematic.txt
class_project/DATA605/Spring2025/projects/TutorTask102_Spring2025_Real-time_Bitcoin_Data_Ingestion_and_Analysis_with_Dagster/bitcoin_pipeline/: Dagster.API.ipynb  Dagster.API.md  Dagster.API.py  Dagster.example.ipynb  Dagster.example.py  Dockerfile  README.md  __init__.py  definitions.py  jobs.py  pyproject.toml  schedules.py  set_env.sh  setup.cfg  setup.py
class_project/DATA605/Spring2025/projects/TutorTask102_Spring2025_Real-time_Bitcoin_Data_Ingestion_and_Analysis_with_Dagster/bitcoin_pipeline/bitcoin_pipeline/: Dagster_utils.py  definitions.py  jobs.py  ops.py  schedules.py
class_project/MSML610/Fall2025/Projects/UmdTask55_Fall2025_ONNX_Time_Series_Forecasting_of_Stock_Prices/: Dockerfile  README.md  TODO.md  docker_bash.sh  docker_build.sh  docker_clean.sh  docker_ensemble.sh  docker_ensemble_analysis.sh  docker_exec.sh  docker_jupyter.sh  docker_name.sh  docker_push.sh  docker_streamlit.sh  etc_sudoers  evaluation.py  install_common_packages.sh  install_jupyter_extensions.sh  model.py  onnx_forecasting.API.ipynb  onnx_forecasting.API.ipynb.ipynb  onnx_forecasting.API.ipynb.md  onnx_forecasting.API.md  onnx_forecasting.example.ipynb  onnx_forecasting.example.ipynb.ipynb  onnx_forecasting.example.ipynb.md  onnx_forecasting.example.md  onnx_forecasting_utils.py  preprocessing.py  pyproject.toml  requirements.txt  streamlit_dashboard.py  utils.py  utils.sh
class_project/MSML610/Fall2025/Projects/UmdTask55_Fall2025_ONNX_Time_Series_Forecasting_of_Stock_Prices/ensemble/: 01_preprocess_data.py  02_train_lstm.py  03_train_tcn.py  04_train_xgboost.py  05_ensemble_analysis.py  run_all.sh
class_scripts/: README.md  common_utils.py  count_book_pages.py  count_lecture_pages.py  count_words.py  gen_book_chapter.py  gen_lecture_script.py  gen_quizzes.py  gen_slides.py  get_lecture_file.py  reorg_figure_files.prompt.md  reorg_figure_files2.prompt.md  reorg_figure_files3.prompt.md  slide_check.py  slide_improve.py  slide_reduce.py
class_shell_scripts/: README.slides.md  fix_slides.prompt.md  gen_book_chapter.sh  process_lessons.md  suggest_improvements.prompt.md
classes/: README.md  README.slides.md  count_book_pages.sh  count_pages.sh  gen_book_chapter.sh  gen_data605_book_chapter.sh  gen_quizzes.sh  gen_slides.sh  process_lessons.md
classes2/: README.md  common_utils.py  count_book_pages.py  count_lecture_pages.py  gen_book_chapter.py  gen_lecture_script.py  gen_quizzes.py  slide_check.py  slide_improve.py  slide_reduce.py
coding/: index.html
cv/: index.html
data/: README.md  features.csv  raw_data.csv  sample.csv
data605/: README.md  README.txt
data605_book/: mkdocs.yml
education/: index.html
gp_quant_research_statement/: paper.tex  run_latex.sh
gp_resume/: README.md  gp_saggese_cv.md  gp_saggese_cv.tex  paper.tex  run_latex.sh  (+1 more)
tutorials/CausalML_Diabetes_Study/: CausalML.API.ipynb  CausalML.API.md  CausalML.API.py  CausalML.example.ipynb  CausalML.example.md  CausalML.example.py  Dockerfile  README.md  blog_CausalML.md  docker_bash.sh  docker_build.sh  docker_clean.sh  docker_cmd.sh  docker_exec.sh  docker_jupyter.sh  docker_name.sh  docker_push.sh  pyproject.toml  requirements.txt  run_jupyter.sh  utils.py  version.sh
tutorials/CausalML_Diabetes_Study/devops/: docker_build.sh
tutorials/crewai/devops/docker_build/: pyproject.toml
tutorials/tutorial_langchain/devops/docker_build/: pyproject.toml
tutorials/tutorial_langgraph/devops/docker_build/: pip_list.txt  pyproject.toml
(+4375 files in other folders)
