[project]
name = "causalml-diabetes-study"
version = "0.1.0"
description = "Estimating causal impact of lifestyle interventions on diabetes outcomes using CausalML"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "notebook>=7.0,<8.0",
    "ipykernel>=6.0,<7.0",
    "ipywidgets>=8.0,<9.0",
    "numpy>=1.0,<2.0",
    "pandas>=2.0,<3.0",
    "scikit-learn>=1.0,<2.0",
    "matplotlib>=3.0,<4.0",
    "seaborn>=0.12,<1.0",
    "xgboost>=2.0,<3.0",
    "causalml>=0.15,<1.0",
    "nbconvert>=7.0,<8.0",
    "jinja2>=3.0,<4.0",
    "papermill>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
